--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://www.soundnodeapp.com/?ref=producthunt#intro"><img src="./js/logo.png"> Soundnode</a>
+          <a class="navbar-brand" href="#intro"><img src="./js/logo.png">Youtube to mp3</a>
         </div>
 
         <div class="navbar-collapse collapse">
